--- a/index.html
+++ b/index.html
@@ -241,18 +241,17 @@ document is written to work with both.
 
 <section id="sotd">
 
-This document was published as a Draft Finding by the [Web Privacy Principles Task
-Force](https://github.com/w3ctag/privacy-principles), which was convened by the [Technical
-Architecture Group (TAG)](https://www.w3.org/2001/tag/) and the [Privacy Interest Group
-(PING)](https://www.w3.org/Privacy/IG/). Publication as a Draft Finding does not imply endorsement
-by the TAG or by the W3C Membership. This draft <strong>does not yet</strong> reflect the consensus
-of the task force and may be updated, replaced, or obsoleted by other documents at any time. It is
-inappropriate to cite this document as anything other than a work in progress.
+This document is a Draft Finding of the [Technical Architecture Group (TAG)](https://www.w3.org/2001/tag/).
+It was prepared by the [Web Privacy Principles Task Force](https://github.com/w3ctag/privacy-principles),
+which was convened by the TAG. Publication as a Draft Finding does not imply endorsement by the TAG
+or by the W3C Membership.
 
-It does not contain any normative content.
+This draft <strong>does not yet</strong> reflect the consensus of the TAG or the task force and may
+be updated, replaced, or obsoleted by other documents at any time. It is inappropriate to cite this
+document as anything other than a work in progress.
 
-This document will continue to evolve and the task force will issue updates as often as needed. At
-the conclusion of the task force, it is intended to be adopted by the TAG as a Finding.
+It will continue to evolve and the task force will issue updates as often as needed. At the
+conclusion of the task force, the TAG intends to adopt this document as a Finding.
 
 </section>
 
