adding missing references on harassment

--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         }
       ],
       localBiblio: {
+        'Addressing-Cyber-Harassment': {
+          title: 'Addressing cyber harassment: An overview of hate crimes in cyberspace',
+          authors: ['Danielle Keats Citron'],
+          publisher: 'Case Western Reserve Journal of Law, Technology & the Internet',
+          date: '2015',
+          href: 'https://scholarship.law.bu.edu/cgi/viewcontent.cgi?article=1634&context=faculty_scholarship'
+        },
         'Anti-Tracking-Policy': {
           title: 'Anti-Tracking Policy',
           href: 'https://wiki.mozilla.org/Security/Anti_tracking_policy#Tracking_Definition',
@@ -202,6 +209,13 @@
           authors: ['Ari Ezra Waldman'],
           href: 'https://www.cambridge.org/core/books/industry-unbound/787989F90DBFC08E47546178A7AB04F7',
           publisher: 'Cambridge University Press',
+        },
+        'Internet-of-Garbage': {
+          title: 'The Internet of Garbage',
+          authors: ['Sarah Jeong'],
+          publisher: 'The Verge',
+          date: '2018',
+          href: 'https://www.theverge.com/2018/8/28/17777330/internet-of-garbage-book-sarah-jeong-online-harassment'
         },
         'Lost-In-Crowd': {
           title: 'Why You Can No Longer Get Lost in the Crowd',
